--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/app.js",
-    "devserver": "nodemon src/app.ts"
+    "start": "npm run build && node dist/app.js"
+    // "devserver": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
