--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
     "express": "^4.18.3",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1"
   }
 }
